[workspace]
members = [
    "crates/rvx-cli",
    "crates/rvx-core",
    "crates/rvx-riscv",
    "crates/rvx-virt",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
cranelift = "0.130.1"
cranelift-jit = "0.130.1"
cranelift-module = "0.130.1"
cranelift-native = "0.130.1"
libc = "0.2.177"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rustc-hash = "2.1.1"
ureq = "2.12.1"
xshell = "0.2.7"

[patch.crates-io]
cranelift-jit = { path = "vendor/cranelift-jit" }
