[package]
name = "rvx-riscv"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
cranelift.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
cranelift-native.workspace = true
libc.workspace = true
rustc-hash.workspace = true
rvx-core = { path = "../rvx-core" }
